sourcePkgs wasn't correct; causing failing installs

--- a/inst/docs/renvAndPakAndRequire.Rmd
+++ b/inst/docs/renvAndPakAndRequire.Rmd
@@ -259,6 +259,131 @@ Subprocess backtrace:
 12. global (function (e) …
 ```
 
+## Incorrectly attempts to install binary packages from Posit Package Manager when these should not be
+
+```{r,eval=FALSE}
+pak::pkg_install("ianmseddy/PSPclean@development")
+✔ Updated metadata database: 6.09 MB in 9 files.                           
+✔ Updating metadata database ... done                                     
+                                                                           
+→ Will install 24 packages.
+→ All 24 packages (0 B) are cached.
++ classInt       0.4-10     
++ crayon         1.5.2      
++ data.table     1.15.4     
++ DBI            1.2.2      
++ digest         0.6.35     
++ e1071          1.7-14     
++ filelock       1.0.3      
++ fpCompare      0.2.4      
++ fs             1.6.3       + ✔ make
++ lobstr         1.1.2      
++ magrittr       2.0.3      
++ prettyunits    1.2.0      
++ proxy          0.4-27     
++ PSPclean       0.1.4.9005 [bld][cmp] (GitHub: f12d524)
++ raster         3.6-26     
++ Rcpp           1.0.12     
++ reproducible   2.0.11     
++ rlang          1.1.3      
++ s2             1.1.6       + ✔ libssl-dev
++ sf             1.0-16      + ✔ libgdal-dev, ✔ gdal-bin, ✔ libgeos-dev, ✔ libproj-dev, ✔ libsqlite3-dev
++ sp             2.1-3      
++ terra          1.7-71      + ✔ libgdal-dev, ✔ gdal-bin, ✔ libgeos-dev, ✔ libproj-dev, ✔ libsqlite3-dev
++ units          0.8-5       + ✔ libudunits2-dev
++ wk             0.9.1      
+✔ All system requirements are already installed.
+  
+ℹ No downloads are needed, 24 pkgs are cached
+✔ Got filelock 1.0.3 (x86_64-pc-linux-gnu-ubuntu-22.04) (24.25 kB)
+✔ Got DBI 1.2.2 (x86_64-pc-linux-gnu-ubuntu-22.04) (890.85 kB)
+✔ Got classInt 0.4-10 (x86_64-pc-linux-gnu-ubuntu-22.04) (497.59 kB)
+✔ Got lobstr 1.1.2 (x86_64-pc-linux-gnu-ubuntu-22.04) (132.05 kB)
+✔ Got fs 1.6.3 (x86_64-pc-linux-gnu-ubuntu-22.04) (288.29 kB)
+✔ Got digest 0.6.35 (x86_64-pc-linux-gnu-ubuntu-22.04) (217.34 kB)
+✔ Got PSPclean 0.1.4.9005 (source) (43.21 kB)
+✔ Got prettyunits 1.2.0 (x86_64-pc-linux-gnu-ubuntu-22.04) (154.92 kB)
+✔ Got Rcpp 1.0.12 (x86_64-pc-linux-gnu-ubuntu-22.04) (2.15 MB)
+✔ Got magrittr 2.0.3 (x86_64-pc-linux-gnu-ubuntu-22.04) (221.09 kB)
+✔ Got crayon 1.5.2 (x86_64-pc-linux-gnu-ubuntu-22.04) (159.79 kB)
+✔ Got data.table 1.15.4 (x86_64-pc-linux-gnu-ubuntu-22.04) (2.18 MB)
+✔ Got rlang 1.1.3 (x86_64-pc-linux-gnu-ubuntu-22.04) (1.55 MB)
+✔ Got raster 3.6-26 (x86_64-pc-linux-gnu-ubuntu-22.04) (3.33 MB)
+✔ Got fpCompare 0.2.4 (x86_64-pc-linux-gnu-ubuntu-22.04) (19.92 kB)
+✔ Got e1071 1.7-14 (x86_64-pc-linux-gnu-ubuntu-22.04) (589.71 kB)
+✔ Got s2 1.1.6 (x86_64-pc-linux-gnu-ubuntu-22.04) (2.17 MB)
+✔ Got sp 2.1-3 (x86_64-pc-linux-gnu-ubuntu-22.04) (2.09 MB)
+✔ Got reproducible 2.0.11 (x86_64-pc-linux-gnu-ubuntu-22.04) (947.52 kB)
+✔ Got proxy 0.4-27 (x86_64-pc-linux-gnu-ubuntu-22.04) (174.07 kB)
+✔ Got wk 0.9.1 (x86_64-pc-linux-gnu-ubuntu-22.04) (1.72 MB)
+✔ Got sf 1.0-16 (x86_64-pc-linux-gnu-ubuntu-22.04) (3.56 MB)
+✔ Got terra 1.7-71 (x86_64-pc-linux-gnu-ubuntu-22.04) (4.24 MB)
+✔ Got units 0.8-5 (x86_64-pc-linux-gnu-ubuntu-22.04) (354.95 kB)
+✔ Installed DBI 1.2.2  (102ms)                                                                                               
+✔ Installed classInt 0.4-10  (105ms)                                                                                         
+✔ Installed crayon 1.5.2  (132ms)                                                                                          
+✔ Installed data.table 1.15.4  (146ms)                                                                                
+✔ Installed digest 0.6.35  (176ms)                                                                          
+✔ Installed e1071 1.7-14  (186ms)                                                                   
+✔ Installed filelock 1.0.3  (193ms)                                                     
+✔ Installed Rcpp 1.0.12  (306ms)                                                
+✔ Installed fpCompare 0.2.4  (36ms)                                          
+✔ Installed fs 1.6.3  (23ms)                                               
+✔ Installed lobstr 1.1.2  (13ms)                                    
+✔ Installed magrittr 2.0.3  (38ms)                                    
+✔ Installed prettyunits 1.2.0  (16ms)                                    
+✔ Installed proxy 0.4-27  (27ms)                                       
+✔ Installed raster 3.6-26  (38ms)                                   
+✔ Installed reproducible 2.0.11  (22ms)                                   
+✔ Installed rlang 1.1.3  (26ms)                                         
+✔ Installed s2 1.1.6  (36ms)                                     
+✔ Installed sf 1.0-16  (56ms)                                   
+✔ Installed sp 2.1-3  (40ms)                                    
+✔ Installed terra 1.7-71  (99ms)                                   
+✔ Installed units 0.8-5  (18ms)                                    
+✔ Installed wk 0.9.1  (30ms)                                     
+ℹ Packaging PSPclean 0.1.4.9005                                 
+✔ Packaged PSPclean 0.1.4.9005 (516ms)                              
+ℹ Building PSPclean 0.1.4.9005                                      
+✖ Failed to build PSPclean 0.1.4.9005 (3.8s)                        
+Error:                                                              
+! error in pak subprocess
+Caused by error in `stop_task_build(state, worker)`:
+! Failed to build source package PSPclean.
+Type .Last.error to see the more details.
+Timing stopped at: 3.321 0.093 19.32
+> .Last.error
+<callr_error/rlib_error_3_0/rlib_error/error>
+Error: 
+! error in pak subprocess
+Caused by error in `stop_task_build(state, worker)`:
+! Failed to build source package PSPclean.
+---
+Backtrace:
+1. base::system.time(pak::pkg_install("ianmseddy/PSPclean@development"))
+2. pak::pkg_install("ianmseddy/PSPclean@development")
+3. pak:::remote(function(...) get("pkg_install_do_plan", asNamespace("pak"))(...), …
+4. err$throw(res$error)
+---
+Subprocess backtrace:
+ 1. base::withCallingHandlers(cli_message = function(msg) { …
+ 2. get("pkg_install_do_plan", asNamespace("pak"))(...)
+ 3. proposal$install()
+ 4. pkgdepends::install_package_plan(plan, lib = private$library, num_workers = nw, …
+ 5. base::withCallingHandlers({ …
+ 6. pkgdepends:::handle_events(state, events)
+ 7. pkgdepends:::handle_event(state, i)
+ 8. pkgdepends:::stop_task(state, worker)
+ 9. pkgdepends:::stop_task_build(state, worker)
+10. base::throw(pkg_error("Failed to build source package {.pkg {pkg}}.", …
+11. | base::signalCondition(cond)
+12. global (function (e) …
+
+            
+Install("ianmseddy/PSPclean@development")
+```
+
+
 ## renv
 - doesn't install packages that have been removed from CRAN (SpaDES)
 - finds packages that other package dependencies don't find (SpaDES.docs)
